# inventorymanager

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  ru.metnerium.war1.desktop.in  ru.metnerium.war1.yml
